--- a/overlay/FrameworksResOverlayMT8163/res/values/config.xml
+++ b/overlay/FrameworksResOverlayMT8163/res/values/config.xml
@@ -164,4 +164,7 @@
 
     <!-- If this is true, the screen will come on when you unplug usb/power/whatever. -->
     <bool name="config_unplugTurnsOnScreen">true</bool>
+
+    <!-- Feature flag to store TaskSnapshot in 16 bit pixel format to save memory. -->
+    <bool name="config_use16BitTaskSnapshotPixelFormat">true</bool>
 </resources>
